--- a/assets/scss/admin/admin.scss
+++ b/assets/scss/admin/admin.scss
@@ -400,12 +400,14 @@ input, select, textarea {
 	right: 0;
 	opacity: 0;
 	visibility: hidden;
+	z-index: 0;
 	padding: 0.5em 20px;
 
 	&.active {
-		position: static;
+		position: relative;
 		opacity: 1;
 		visibility: visible;
+		z-index: 1;
 	}
 
 	.notice {
